# NetSci-Project

./: .gitattributes  README.md
code/: .gitattributes  .gitignore  Clustering.py  K-D_Tree.ipynb  Untitled8 (1)(2).ipynb  __main__.py  brainNet.py  centralities.py  comunities.py  conda-lock.yml  graphing.py  log.txt  main.py  pbs.sh  pixi.toml  plot_style.py  pyproject.toml  setup-dataset.sh
code/analysis/: centralities.py  clustering.py  communities.py  edgeStats.py  flow.py  log.txt
code/cache/: CD1-E_no1_udir.pickle  CD1-E_no2_udir.pickle  sbm.pickle  synthetic_graph_1.npy  synthetic_graph_1_raw_udir.pickle  synthetic_graph_1_udir.pickle
code/cache/synthetic_graph_1/K_brainNet/: output.pkl
code/cache/synthetic_graph_1/K_centralities/: output.pkl
code/cache/synthetic_graph_1/K_clustering/: output.pkl
code/cache/synthetic_graph_1/K_edgesDist/: output.pkl
code/cache/synthetic_graph_1/K_edgesDistW/: output.pkl
code/cache/synthetic_graph_1/K_sbmState/: output.pkl
code/datasets/CD1-E_no1/: edges.csv  nodes.csv
code/datasets/synthetic_graph_1/: edges.csv  nodes.csv
code/datasets/synthetic_graph_1_raw/: edges.csv
code/simulation/: disease.py  disease_graphing.py
graphs/: brain.py
graphs/CD1-E_no2/CD1-E_no2/: atlas.csv  edges.csv  nodes.csv  wherefile.txt
graphs/synthetic_graph_1/synthetic_graph_1/1_b_3_0/: 1_b_3_0_edges_processed.csv
graphs/synthetic_graph_1_raw/synthetic_graph_1_raw/1_b_3_0/: 1_b_3_0_edges.csv  1_b_3_0_nodes.csv
poster/: poster.typ  theme.typ
results/: sbm-CD1.txt  synt1.txt
slides/: bibliography.bib  slides.typ
